--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "comp2156",
   "version": "1.0.0",
-  "description": "",
+  "description": "comp2156",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Inder706/COMP2156.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Indeerpreet",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Inder706/COMP2156/issues"
