--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eject": "react-scripts eject"
   },
   "keywords": [],
-  "author": "Inderpreet",
+  "author": "Indeerpreet",
   "license": "ISC",
   "dependencies": {
     "gh-pages": "^2.0.1",
